--- a/README.rmd
+++ b/README.rmd
@@ -50,6 +50,6 @@ plot_inertias(sq_first, sq_total, r = 1/3)
 
 ```{r}
 first <- inertias$first
-contour(first, main = "Count plot of first inertias of rectangular tables", sub = paste(colnames(first), collapse = " "))
+contour(first, main = "Countour plot of first inertias of rectangular tables", sub = paste(colnames(first), collapse = " "))
 ```
 
